# iccflow

./: .gitignore  CLAUDE.md
flow-wasm/: CMakeLists.txt  flow-wrapper.cpp  smoketest.mjs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/wasm/: SHA256SUMS  iccflow.mjs  iccflow.wasm
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: DropZone.jsx  DropZone.module.css  OutputImagePanel.jsx  Panel.module.css  ProfileStackPanel.jsx  SourceImagePanel.jsx
frontend/src/lib/: flow.js
scripts/: build-wasm.sh  deploy.sh
